--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 	implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 	implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
-	
+    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
