--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.apache.kafka:kafka-streams'
+	implementation group: 'org.apache.kafka', name: 'kafka-streams', version: '2.8.0'
+    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.8.0'
 	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 	implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 	implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
