add client id for producer and close producer properly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ streamsProps={\
    }
 
 producerProps={\
+    'client.id'          : '${topic.cache}-direct', \
     'bootstrap.servers'  : '${kafka.servers}', \
     'enable.idempotence' : 'true', \
     'key.serializer'     : '${json.serdes}', \
