--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,10 +23,11 @@ streamsProps={\
     'state.dir'            : '${user.home}/tmp/kafka-streams', \
     'processing.guarantee' : 'exactly_once_beta', \
     'default.key.serde'    : '${json.serdes}', \
-    'default.value.serde'  : '${json.serdes}', \
+    'default.value.serde'  : 'io.confluent.kafka.streams.serdes.avro.SpecificAvroSerde', \
     'default.deserialization.exception.handler' : 'org.apache.kafka.streams.errors.LogAndContinueExceptionHandler', \
     'default.production.exception.handler'      : 'sean.kafka_streams_poc.streams.exception.handler.ProductionLogAndContinueExceptionHandler', \
-    'task.timeout.ms'      : '10000' \
+    'task.timeout.ms'      : '10000', \
+    'schema.registry.url' : 'http://localhost:8081' \
    }
 
 producerProps={\
@@ -34,5 +35,6 @@ producerProps={\
     'bootstrap.servers'  : '${kafka.servers}', \
     'enable.idempotence' : 'true', \
     'key.serializer'     : '${json.serdes}', \
-    'value.serializer'   : '${json.serdes}' \
+    'value.serializer'   : 'io.confluent.kafka.serializers.KafkaAvroSerializer', \
+    'schema.registry.url' : 'http://localhost:8081' \
    }
